fix paranja on small devices again

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -666,7 +666,7 @@ html {
     background-position: center;
 
     @media screen and (max-width: 700px) {
-      min-width: 300px;
+      min-width: 250px;
     }
   }
 
